Fix focus when laptop lid closed and reopened

When a Windows laptop lid is reopened, a redundant call into
HWNDMessageHandler::OnDwmCompositionChanged() calls into
FrameTypeChanged() and then PerformDwmTransition() which hides and shows
the current window in order to fix a theme change rendering issue.

For some reason this puts Chrome into a strange focus state, where
another desktop Window is shown at the top of the Z order, but the
Chrome window still thinks it is focused, resulting in strange behavior
and rendering issues.

This fixes the issue by filtering out redundant theme change messages,
where DWM composition did not actually change.

Bug: 895855
Change-Id: Id6badb462a1011e246810c885acc173cbbce387e
Reviewed-on: https://chromium-review.googlesource.com/c/1283837
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600201}
Former-commit-id: 25f06cebba0d2b43bbea51e04e1800c485eb5132